kubernetes/canary/virtual-service-canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway-canary
  namespace: kubernet-prod
spec:
  hosts:
  - api-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-gateway
        port:
          number: 8080
        subset: v1
      weight: 90
    - destination:
        host: api-gateway
        port:
          number: 8080
        subset: v2
      weight: 10
